
Bugfixes

* Query was broken since 2.0.4-beta2.  
  (#69; reported by Ahn Ki Yung)
* Backchain now correctly takes into account inductive restrictions  
  (#70; reported by Ahn Ki Yung)
* Search now correctly raises eigenvariables over support  
  (#71; reported by Morten Rhiger)
* Undo/ProofGeneral now handles `abbrev` and `unabbrev` correctly.


Changes in 2.0.4 from 2.0.3
---------------------------

Possibly breaking changes

* The `search` tactic has the same error handling behavior in interactive
  and non-interactive modes, functioning like a failed tactic in both cases
  if no subgoals were closed.
* The character `&` can no longer appear inside the names of identifiers.

Additions

* Added support for specification-level conjunction, written using `&`.

* Added a new tactic form:

        search with <witness>.

  This tactic runs the search command with a given search witness. To see
  these witnesses, run any of the other search forms with:

        Set witnesses on.

  The witness string that is printed can then be used to replay the exact
  same search. There is no backtracking involved with witness strings.
  Hence, the replay will tend to be a lot faster.

  Witnesses have the following grammar:

        witness ::= true | =
                  | left witness | right witness
                  | split(witness,witness)
                  | apply hyp
                  | intros[id1, ..., idn] witness
                  | exists[id1=term1, ..., idn=termn] witness
                  | unfold(id,n,witness1,...,witnessn)
                  | (witness)
                  | *

  The last witness form stands for a place-holder so you can give partial
  witnesses to search. In fact, the default search tactic is identical to:

        search with *.

  Please use this feature sparingly, and only when building proofs. After
  you are done with the proof, delete the "with" statements. These witnesses